2009-02-15  Naohiro Aota  <naota@elisp.net>

	* w3m-session.el (w3m-session-crash-recovery): Change the default to t.

2009-02-12  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-buffer-setup): Add keymap that cycles buffers as usual to
	mode-line-buffer-identification.

2009-02-09  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-bookmark.el (w3m-bookmark-view, w3m-bookmark-view-new-session)
	(w3m-bookmark-make-menu-items): Check if bookmark file exists.

2009-02-04  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-header-line-insert): Don't decode url containing
	non-ASCII characters already.  e.g. about://weather/WHERE

2009-02-03  Hideyuki SHIRAI  <shirai@meadowy.org>

	* mew-w3m.el (mew-w3m-cid-retrieve): Remove a wrong set-buffer().

2009-02-03  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-input-url): Offer decoded url in the minibuffer.
	(w3m-copy-buffer): Copy w3m-current-coding-system.
	(w3m-header-line-insert): Display decoded url.

2009-02-02  Naohiro Aota  <naota@elisp.net>

	* w3m.el (w3m-idle-images-show): Change the order of image retrieving.
	(w3m-toggle-inline-images-internal): Use `w3m-idle-image-item'
	text-property.
	(w3m-goto-url): Add new argument `no-popup'.
	(w3m-goto-url-with-timer): Call w3m-goto-url with `no-popup' nil.

2009-02-01  Naohiro Aota  <naota@elisp.net>

	* w3m.el (w3m-toggle-inline-images-internal): Add new argument
	`safe-regexp'.
	(w3m-toggle-inline-images): Pass `safe-regexp' to
	w3m-toggle-inline-images-internal when called non-interactively.

2009-01-28  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-proc.el: Autoload w3m-idle-images-show-unqueue when compiling.

2009-01-27  Naohiro Aota  <naota@elisp.net>

	* w3m-proc.el (w3m-process-stop): Call `w3m-idle-images-show-unqueue'.

	* w3m.el (w3m-idle-images-show-timer, w3m-idle-images-show-list)
	(w3m-idle-images-show-interval): New variables.
	(w3m-idle-images-show, w3m-idle-images-show-unqueue): New functions.
	(w3m-toggle-inline-images-internal): Use them.
